<package>
	
	<name>obindex</name>
	<version>0.1.0</version>
	<description>This package implements an index of binary features, which, in combination with an inverted file, can be used to create a database of images.</description>

	<maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
	<author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>	
	<license>BSD</license>
	<url type="website">http://wiki.ros.org/obindex</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	
	<run_depend>roscpp</run_depend>

</package>
